2008-04-03  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_info_cache.rb:  Merge full cache file into
	latest data.  Don't write cache files when checking for them.  Only
	update full cache file when we've read it.  Refresh all data when
	loading all data.
	* lib/rubygems/dependency_installer.rb:  Fix --force to work without
	network for dependent gems.  Fix all-fetching test.
	* lib/rubygems/commands/query_command.rb:  Obey --all flag for gem
	query.
	* lib/rubygems/commands/environment_command.rb:  Don't display
	RubyGemsPackageVersion.
	* lib/rubygems/indexer.rb:  Fix typo.  Patch by Tom Copeland.
	* lib/rubygems/command_manager.rb:  Display RubyGemsVersion with
	--version.
	* lib/rubygems/commands/pristine_command.rb:  Rebuild extensions along
	with everything else.  Patch #19281 by Dr. Nic Williams.

2008-04-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Fix prefix to point to directory above RubyGems,
	so RubyGems will be installed into lib/.
	* setup.rb:  Work around apple's libdir-installed RubyGems, by
	installing into sitelibdir.
	* Rakefile:  Add svnversion to RubyGems version number for `rake
	install`.

2008-03-31  Luis Lavena  <luislavena@gmail.com>

	* test/: Allow tests to use a random (but controlled) port number
	instead of a hardcoded one. This helps CI tools when running
	parallels builds.

2008-03-30  Luis Lavena  <luislavena@gmail.com>

	* test/test_gem.rb: Leave APPLE_GEM_HOME tests only to *nixes.
	* lib/rubygems/remote_fetcher.rb: Errno::ECONNABORTED raised on Windows
	on closed Keep-Alive connections.

2008-03-29  Eric Hodel  <drbrain@segment7.net>

	* gemspecs/:  Removed.
	* examples/:  Removed.
	* doc/design/:  Removed.
	* doc/rdoc_templates/:  Removed.
	* Rakefile:  Package doc/release_notes/.
	* setup.rb:  Use full path to release_notes, ensure RDoc can be
	both removed and installed.

2008-03-28  Eric Hodel  <drbrain@segment7.net>

	* bin/gem, Rakefile:  RubyGems now requires Ruby > 1.8.3.